--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   "private": true,
   "dependencies": {
     "@remotion/cli": "4.0.278",
+    "@remotion/google-fonts": "^4.0.278",
+    "@remotion/tailwind-v4": "4.0.278",
+    "@remotion/zod-types": "4.0.278",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "remotion": "4.0.278",
-    "@remotion/tailwind-v4": "4.0.278",
-    "tailwindcss": "4.0.0"
+    "tailwindcss": "4.0.0",
+    "zod": "3.22.3"
   },
   "devDependencies": {
     "@remotion/eslint-config-flat": "4.0.278",
