--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@main
       - uses: actions/setup-node@main
       - run: npm i
-      - run: npx remotion render Main out/video.mp4
+      - run: npx remotion render TikTok out/video.mp4
       - uses: actions/upload-artifact@v4
         with:
           name: out.mp4
