--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -23,7 +23,10 @@ jobs:
       - uses: actions/checkout@main
       - uses: actions/setup-node@main
       - run: npm i
-      - run: npx remotion render TikTok out/video.mp4
+      - run: echo $WORKFLOW_INPUT > input-props.json
+        env:
+          WORKFLOW_INPUT: ${{ toJson(github.event.inputs) }}
+      - run: npx remotion render TikTok out/video.mp4 --props="./input-props.json"
       - uses: actions/upload-artifact@v4
         with:
           name: out.mp4
