--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -22,8 +22,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       FTP_HOST: ${{ vars.FTP_HOST }}
-      FTP_USER: ${{ vars.FTP_USER }}
-      FTP_PASSWORD: ${{ vars.FTP_PASSWORD }}
+      FTP_USER: ${{ secrets.FTP_USER }}
+      FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
     steps:
       - uses: actions/checkout@main
       - uses: oven-sh/setup-bun@v2
