--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@remotion/google-fonts": "^4.0.278",
     "@remotion/tailwind-v4": "4.0.278",
     "@remotion/zod-types": "4.0.278",
+    "axios": "^1.8.4",
     "basic-ftp": "^5.0.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -23,7 +24,8 @@
     "@types/web": "0.0.166",
     "eslint": "9.19.0",
     "prettier": "3.3.3",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "@types/bun": "latest"
   },
   "scripts": {
     "dev": "remotionb studio",
@@ -33,5 +35,7 @@
   },
   "sideEffects": [
     "*.css"
-  ]
+  ],
+  "module": "index.ts",
+  "type": "module"
 }
