--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -22,14 +22,12 @@ jobs:
     steps:
       - uses: actions/checkout@main
       - uses: oven-sh/setup-bun@v2
-      - run: echo ${{ vars.TESTTEST }}
-        env:
-          TEST_SECRET: ${{ vars.TESTTEST }}
       - run: bun i
       - run: echo $WORKFLOW_INPUT > input-props.json
         env:
           WORKFLOW_INPUT: ${{ toJson(github.event.inputs) }}
       - run: bunx remotion render TikTok out/video.mp4 --props="./input-props.json"
-      - run: bun upload.js
+      - uses: actions/setup-node
+      - run: node upload.js
         env:
           UPLOADTHING: ${{ secrets.UPLOADTHING }}
