--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -18,6 +18,8 @@ on:
         description: "What should the content be?"
         required: true
         default: "Life is not always easy. There will be times when no one is there to guide you. No one will push you to wake up early. No one will remind you to chase your dreams. You must be the one to take action. You must learn to rely on yourself. Because if you wait for others, you will wait forever. People have their own struggles, their own lives. They may love you, but they cannot live for you. You must be strong enough to face challenges alone"
+      noPublish:
+        description: "upload it but don't publish it"
 
 jobs:
   render:
@@ -35,3 +37,4 @@ jobs:
         env:
           UPLOADTHING: ${{ secrets.UPLOADTHING }}
           VIDEO_TITLE: ${{ inputs.videoTitle }}
+          NO_PUBLISH: ${{ inputs.noPublish }}
